# Alice-Bob-Challenge

./: .gitignore  CMAS_BatuTim.py  CMAS_BatuTim_HEvolution.py  LICENSE.md  Main_PiqassoNotebook.ipynb  README.md  _btj_core.py  results.txt  run.py
challenge/: 1-challenge.ipynb  AddZ.ipynb  Drift.ipynb  PPO_optimizer.py  PPO_optimizer_dontgetcooked.py  Scratch.py  Scratch_nontuneable.py  TzTx_optimization.py  detuning_sweep.py  leon.py  leongraphs_metrics.npz  optimize_cat.py  optimize_cat_colab.py  pi_pulse_pipeline.py  pi_pulse_pipeline.py.bak
src/: cat_qubit.py  (+1 more)
team-(psi)ceratops/: .gitignore  pyproject.toml  requirements.txt  run.sh
team-(psi)ceratops/notebooks/: 00_challenge_analysis.md  01_baseline.ipynb  02_reward_analysis.ipynb  04_optimizer_comparison.ipynb  05_final_results.ipynb
team-(psi)ceratops/src/: __init__.py  benchmark.py  config.py  gates.py  moon_cat.py
team-(psi)ceratops/src/optimizers/: __init__.py  bayesian_opt.py  cmaes_opt.py  hybrid_opt.py  ppo_opt.py  reinforce_opt.py
team-(psi)ceratops/src/plotting/: __init__.py  _analysis.py  _convergence.py  _dashboard.py  _diagnostics.py  _style.py
team-(psi)ceratops/src/reward/: __init__.py  _enhanced.py  _factory.py  _helpers.py  _parity.py  _proxy.py  _simple.py  _spectral.py  _vacuum.py
team-(psi)ceratops/src/visualization/: __init__.py  _challenge.py  _moon_wigner.py  _pedagogical.py  _vacuum.py  _wigner.py
team-(psi)ceratops/tests/: conftest.py  test_benchmark.py  test_cat_qubit.py  test_convergence.py  test_drift.py  test_gates.py  test_integration.py  test_log_derivative.py  test_moon_cat.py  test_numerical_stability.py  test_reward_correlation.py  test_vacuum_reward.py
(+72 files in other folders)
